[package]
name = "rp2040blink"
version = "0.1.0"
authors = ["The rp-rs Developers"]
edition = "2018"
homepage = "https://github.com/rp-rs/rp-hal"
description = "Blink test for the rp2040 microcontroller"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


rp2040-hal = "0.6.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.7.1"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
rp2040-boot2 = "0.2.1"
panic-halt = "0.2.0"
